--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "task-table",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://X-creator.github.io/task-table",
   "dependencies": {
     "@fontsource/roboto": "^4.5.5",
     "@reduxjs/toolkit": "^1.8.1",
@@ -9,6 +10,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -19,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
